--- a/06_dom/one.html
+++ b/06_dom/one.html
@@ -4,10 +4,28 @@
     <meta charset="UTF-8">
     
     <title>DOM Learning</title>
-</head>
-<body>
-    <div>
-          
+    <style>
+        .bg-black{
+            background-color: rgb(46, 43, 43);
+            color: antiquewhite;
+        }
+    </style>
+</head >
+<body class="bg-black">
+    <div >
+        <h1 id="title" class="heading">DOM learning on Chai and Code <span style="display: none;">test text</span></h1>
+        <h2>Ankit will become a SDE</h2>
+        <h2>Ankit will become a SDE</h2>
+        <h2>Ankit will become a SDE</h2>
+        <p>Lorem ipsum dolor sit amet</p> 
+        <input type="password" name="" id="">
     </div>
+
+    <ul>
+        <li class="list-item">one</li>
+        <li class="list-item">two</li>
+        <li class="list-item">three</li>
+        <li class="list-item">four</li>
+    </ul>
 </body>
 </html> 
